--- a/src/htdocs/.htaccess
+++ b/src/htdocs/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine on
 
 RewriteRule ^api/(.*)$ run.cgi/api/$1 [L]
-RewriteRule ^/(.*)$ run.cgi/web/$1 [L]
+RewriteRule ^$ run.cgi/web/$1 [L]
