--- a/src/app/Makefile
+++ b/src/app/Makefile
@@ -1,6 +1,6 @@
 all:
 
 test:
-	env DWARF_TEST_LEVEL=0 prove -PPretty -prl t
+	env DWARF_TEST_LEVEL=0 prove -PPretty -prlv t
 jenkins:
 	env JUNIT_OUTPUT_FILE=result.xml prove -rl --harness TAP::Harness::JUnit --merge t
