--- a/src/app/Makefile
+++ b/src/app/Makefile
@@ -3,4 +3,4 @@ all:
 test:
 	env DWARF_TEST_LEVEL=0 prove -PPretty -prlv t
 jenkins:
-	env JUNIT_OUTPUT_FILE=result.xml prove -rl --harness TAP::Harness::JUnit --merge t
+	env DWARF_TEST_LEVEL=0 JUNIT_OUTPUT_FILE=result.xml prove -rl --harness TAP::Harness::JUnit --merge t
