--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
+/.build/
+/_build/
+/Build
+/blib
 
+/carton.lock
+/.carton/
+/local/
+
+nytprof.out
+nytprof/
+
+cover_db/
+
+*.bak
+*.old
+*~
+*.swp
+*.o
+*.obj
+
+!LICENSE
+
+MYMETA.*
+
+/Dwarf-*
