--- a/share/htdocs/.htaccess
+++ b/share/htdocs/.htaccess
@@ -4,4 +4,4 @@ RewriteRule ^api/(.*)$ dwarf/run.cgi/api/$1 [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ dwarf/run.cgi/$1 [L]
-RewriteRule ^$ run.cgi/ [L]
+RewriteRule ^$ dwarf/run.cgi/ [L]
