[modify] Makefile に extlib 更新用のターゲットを追加

--- a/share/app/Makefile
+++ b/share/app/Makefile
@@ -2,5 +2,11 @@ all:
 
 test:
 	env DWARF_TEST_LEVEL=0 prove -PPretty -prlv t
+
 jenkins:
 	env DWARF_TEST_LEVEL=0 JUNIT_OUTPUT_FILE=result.xml prove -rl --harness TAP::Harness::JUnit --merge t
+
+update-extlib:
+	cpanm -l ../extlib -v --installdeps .
+	chmod -R g+w ../extlib/*
+	
