extlib の代わりに local を使う

--- a/share/app/Makefile
+++ b/share/app/Makefile
@@ -1,7 +1,7 @@
 S2PAN=    https://s2pan.s2factory.co.jp/
 ENV=	  PATH=/usr/pgsql-9.4/bin:/sbin:/usr/sbin:/usr/local/sbin:/bin:/usr/bin:/usr/local/bin
 MIR=	  --mirror=${S2PAN} --mirror=http://www.cpan.org/ --mirror-only
-PERL5LIB= extlib/lib/perl5
+PERL5LIB= local/lib/perl5
 
 all:
 
@@ -15,15 +15,15 @@ jenkins:
 	cover -report html
 	cover -report clover
 
-update-extlib: cpanm
-	extlib/bin/cpanm -l extlib -v ${MIR} --installdeps .
-	chmod -R ug+rw extlib
+perl5lib: local/bin/cpanm
+	local/bin/cpanm -l local -v ${MIR} --installdeps .
+	chmod -R ug+rw local
 
-carton: cpanm
-	extlib/bin/cpanm -L extlib -v Carton
-	env ${ENV} PERL_CPANM_OPT="${MIR}" PERL5LIB=${PERL5LIB} extlib/bin/carton install --path extlib
+carton: local/bin/cpanm
+	local/bin/cpanm -L local -v Carton
+	env ${ENV} PERL_CPANM_OPT="${MIR}" PERL5LIB=${PERL5LIB} local/bin/carton
 
-cpanm:
-	[ -d extlib/bin ] || mkdir -p extlib/bin
-	[ -f extlib/bin/cpanm ] || curl -L http://xrl.us/cpanm -o extlib/bin/cpanm
-	chmod ug+x extlib/bin/cpanm
+local/bin/cpanm:
+	[ -d local/bin ] || mkdir -p local/bin
+	[ -f local/bin/cpanm ] || curl -L http://xrl.us/cpanm -o local/bin/cpanm
+	chmod ug+rx local/bin/cpanm
