--- a/share/app/Makefile
+++ b/share/app/Makefile
@@ -1,5 +1,5 @@
 S2PAN=    https://s2pan.s2factory.co.jp/
-ENV=	  PATH=/usr/pgsql-9.4/bin:/sbin:/usr/sbin:/usr/local/sbin:/bin:/usr/bin:/usr/local/bin
+ENV=	  PATH=/usr/pgsql-9.4/bin:/usr/local/bin:/sbin:/usr/sbin:/usr/local/sbin:/bin:/usr/bin
 MIR=	  --mirror=${S2PAN} --mirror=http://www.cpan.org/ --mirror-only
 PERL5LIB= local/lib/perl5
 
@@ -24,7 +24,7 @@ Net-LibIDN: local/bin/cpanm
 
 carton: local/bin/cpanm
 	local/bin/cpanm -L local -v Carton
-	env ${ENV} PERL_CARTON_MIRROR=${S2PAN} PERL5LIB=${PERL5LIB} local/bin/carton
+	env ${ENV} PERL_CARTON_MIRROR=${S2PAN} PERL5LIB=${PWD}/${PERL5LIB} local/bin/carton
 
 local/bin/cpanm:
 	[ -d local/bin ] || mkdir -p local/bin
