--- a/minil.toml
+++ b/minil.toml
@@ -1,5 +1,5 @@
 name="Cmd-Dwarf"
-authority = "cpan:seagirl"
+authority = "cpan:SEAGIRL"
 markdown_maker = "builder::MarkdownMaker"
 readme_from = "README.md"
 
